--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,7 +3,7 @@ Slate Theme for GitHub Pages
 by Jason Costello, @jsncostello
 *******************************************************************************/
 
-@import url(github-light.css);
+@import url(github-dark.css);
 
 /*******************************************************************************
 MeyerWeb Reset
