Ajustes no cabecalho

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="white" role="navigation">
   <div class="nav-wrapper container">
-    <a id="logo-container" href={{ site.url }} class="brand-logo">
+    <a id="logo-container" href="{{ site.url }}" class="brand-logo">
       <img src={{ "logo.png" | prepend: site.path_img }} alt="Logo do blog" style="width: 32%; height: 32%;">
     </a>
     <ul class="right hide-on-med-and-down">
