incluindo publicações e ajustando cabecalho

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="white" role="navigation">
+<nav class="teal lighten-2 white-text" role="navigation">
   <div class="nav-wrapper container">
     <a class="brand-logo" id="logo-container" href={{ site.baseurl | prepend: site.url }}>
       <img src={{ "logo.png" | prepend: site.path_img }} alt="Logo do blog" style="width: 32%; height: 32%;">
