--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,9 @@
 ---
 layout: default
 ---
-{{ content }}
+<div class="container">
+<span class="flow-text">  
+  <h4>{{ page.title }}</h4>
+  {{ content }}
+</span>
+</div>
