Ajustes no leiaute das paginas principais

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer teal lighten-2" style="padding-top: 0em;">
+<footer class="page-footer" style="padding-top: 0em;">
     <div class="container" style="padding-bottom: 2em; padding-top: 2em; text-align: center;">
       <a class="white-text" href="https://twitter.com/{{ site.twitter_username }}">
         <span class="icon icon-twitter-square" style="margin: 0em 1em 0em 1em;">
