--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="teal lighten-2 white-text" role="navigation">
+<nav class="white-text" role="navigation">
   <div class="nav-wrapper container">
     <a class="brand-logo" id="logo-container" href={{ site.baseurl | prepend: site.url }}>
       <img src={{ "logo.png" | prepend: site.path_img }} alt="Logo do blog" style="width: 32%; height: 32%;">
@@ -18,6 +18,6 @@
         {% endif %}
       {% endfor %}
     </ul>
-    <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    <a href="{{ page.url | prepend: site.url }}#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
   </div>
 </nav>
