Ajustes na tag <head> para adicionar autor e descrição do blog

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="author" content="Leonardo Romano Camargo"/>
+  <meta name="description" content="Blog desenvolvido em Jekyll para aperfeiçoar os conhecimentos em desenvolvimento web">
+  <meta name="keywords" content="programação web-developer jekyll html5 desenvolvimento-web css javascript blog github">
   <title>{{ site.title }}</title>
 
   <!-- CSS  -->
