--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,15 +9,21 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>
+                        Aqui você irá encontrar um pouco sobre o que penso, alguns projetos e objetivos que gostaria de fazer ou que estou focando no momento, e gostaria de compartilhar com quem interessar-se.
+                    </p>
+                    <p>
+                        Haverá assuntos fora do mundo tecnológico, fique claro que faço isso unicamente para expor meus interesses e aumentar meu engajamento nas metas.
+                    </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>
+                        Certa vez ouvi em um podcast que a melhor maneira de você cumprir um objetivo é torna-lo público, já que assim será cobrado por outras pessoas.
+                    </p>
+                    <p>
+                        Tá bom vai, provavelmente a maior parte do conteúdo seja relacionado a programação e universo geek, então aproveite e caso queira dizer algo fique a vontade.
+                        Mande-me um e-mail se preferir. Let's talk!
+                    </p>
                 </div>
             </div>
         </div>
