--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,16 +19,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Goals</a>
+                        <a href="#portfolio">Metas</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">Sobre</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Contato</a>
                     </li>
                     <li>
-                        <a href="curriculo">Curriculum</a>
+                        <a href="curriculo">Currículo</a>
                     </li>
                 </ul>
             </div>
